# emris_network

./: .env  .gitignore  Cargo.toml  README.md  build.sh  dfx.json  package-lock.json  package.json  webpack.config.js
src/emris_network_backend/: completion.rs  errors.rs  fine_tuning.rs  gpt_neo.rs  helpers.rs  lib.rs  load_dataset.rs  model_chunk.rs  task_manager.rs  task_manager_impl.rs  task_manager_impl_tests.rs  tokenizer.rs  training_task.rs  user.rs  webgpu_compute.rs
src/emris_network_backend/templates/: kernals.wgsl
src/emris_network_frontend/src/: index.html  index.js  webgpu_tokenizer.js
